# Prompt_Enginnering-

./: README.md
genai-app-frontend/: index.html  package-lock.json  package.json
genai-app-frontend/src/: App.jsx
genai_app/: docker-compose.yml  pyproject.toml
genai_app/alembic/: env.py
genai_app/alembic/versions/: 7ec119e0c3ed_create_generations_table.py
genai_app/app/: config.py  db.py  graphql_schema.py  main.py  models.py  schemas.py
genai_app/app/scripts/: test_llm.py
genai_app/app/services/: generation.py  llm_client.py  prompts.py  storage.py
