[project]
name = "genai-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratham Adhikari", email = "adjikaripratham44@gmail.com"}
]
requires-python = ">=3.14,<4"
dependencies = [
    "redis (>=4.2,<6)",
    "arq (>=0.28.0,<0.29.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.50.2,<0.51.0)",
    "anthropic (>=0.116.0,<0.117.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "ariadne (>=1.1.0,<2.0.0)",
    "google-genai (>=2.10.0,<3.0.0)",
    "graphql-core (>=3.2.0,<3.3.0)",
]